--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="https://images.icon-icons.com/1488/PNG/512/5369-uber_102599.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>E-Commerce App</title>
+  <title>Uber Clone</title>
 </head>
 
 <body>
